# codex-engineering-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.py  pyproject.toml
.github/: pull_request_template.md
config/: agent-runtime-policy.example.yaml  framework.example.yaml  harness-policy.example.yaml  overlay-health-policy.example.yaml  private-patterns.example.yaml  release-policy.example.yaml  release-policy.regulated.example.yaml  workflow-profiles.example.yaml  workflow-stages.example.yaml
docs/: architecture.md  deprecation-policy.md  faq.md  getting-started.md  internal-to-open-core-matrix.md  migration-plan.md  open-source-boundary.md  open-source-roadmap.md  scenario-guide.md  skill-assessment.md  skill-catalog.md  skill-layering.md  workflow-guide.md
prompts/: bugfix.md  code-review.md  long-prd.md  low-rework-implementation.md  one-line-request.md  release-readiness.md
scripts/: codex_eng.py  docs_config.py  implement_dry_run.py  privacy_scan.py  scenario_catalog.py  skill_health.py  sync_local_skills.py
tests/: test_agent_runtime.py  test_artifact_splitter.py  test_auto_runner.py  test_automation_and_evidence.py  test_ci_templates.py  test_code_design_quality_reviewer.py  test_code_review_gate.py  test_cross_repo_planner.py  test_delivery_plan_reviewer.py  test_delivery_plan_templates.py  test_delivery_state.py  test_design_architecture_reviewer.py  test_design_doc_templates.py  test_docs_i18n.py  test_edit_readiness.py  test_framework_config_governor.py  test_frontend_acceptance_runner.py  test_git_worktree.py  (+18 more)
(+216 files in other folders)
