[project]
name = "codex-engineering-skills"
version = "0.1.0"
description = "Open engineering-delivery skill framework for Codex-style coding agents"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
